[gd_scene load_steps=4 format=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="StartButton" type="Button" parent="."]
text = "Start"
rect_position = Vector2(360,220)

[node name="ContinueButton" type="Button" parent="."]
text = "Continue"
rect_position = Vector2(360,280)

[node name="OptionsButton" type="Button" parent="."]
text = "Options"
rect_position = Vector2(360,340)

[node name="CreditsButton" type="Button" parent="."]
text = "Credits"
rect_position = Vector2(360,400)

[node name="CodexButton" type="Button" parent="."]
text = "Codex"
rect_position = Vector2(360,460)

[node name="QuitButton" type="Button" parent="."]
text = "Quit"
rect_position = Vector2(360,520)

[node name="ProfileLabel" type="Label" parent="."]
text = "No profile"
rect_position = Vector2(20,20)

[node name="CorruptionLabel" type="Label" parent="."]
text = ""
rect_position = Vector2(20,44)

[node name="VersionLabel" type="Label" parent="."]
text = ""
rect_position = Vector2(1200,20)

[node name="BuildChannelLabel" type="Label" parent="."]
text = ""
rect_position = Vector2(1200,44)

[node name="WarningLabel" type="Label" parent="."]
text = ""
rect_position = Vector2(20,640)

[node name="IncidentCodeLabel" type="Label" parent="."]
text = ""
rect_position = Vector2(1200,68)

[node name="BackgroundAnim" type="AnimatedSprite2D" parent="."]

[node name="AmbientPlayer" type="AudioStreamPlayer" parent="."]

[node name="UIClickPlayer" type="AudioStreamPlayer" parent="."]

[node name="UIHoverPlayer" type="AudioStreamPlayer" parent="."]

[ext_resource path="res://scripts/ui/main_menu.gd" type="Script" id=1]